--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Manager</title>
+    {% block styles %}{% endblock %}
 </head>
 <body>
+<nav>
+    <ul>
+        <li>
+            <a href="{% url 'fintrack:transactions' %}">Transactions</a>
+        </li>
+    </ul>
+</nav>
 {% block content %}{% endblock %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+{% block scripts %}{% endblock %}
 </body>
 </html>
