--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'fintrack:home' %}">Manager</a>
+        <a class="navbar-brand" href="{% url 'fintrack:home' %}">Manager<span class="text-primary fw-bold">AI</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
                 aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
